--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   A Cybersecurity blog by shinris3n <br>
   👊 <a href = "/writeups">Writeups</a> 👊 <a href = "/news">News</a> 👊 <a href = "/resources">Resources</a> <br>
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://shinris3n.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: shinris3n
-github_username:  shinris3n
+url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: 0xGal1leo
+github_username:  GGal1leo
 
 # Build settings
 markdown: kramdown
