--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 0xGal1leo
 github_username:  GGal1leo
-
+repository: GGal1leo/gal1leo.github.io
 # Build settings
 markdown: kramdown
 #theme: minima
