--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: <a href = '/' style = "text-decoration:none;color:#b5e853;" >当て身 Atemi</a>
+title: <a href = '/' style = "text-decoration:none;color:#b5e853;" >/home/Gal1leo</a>
 description: >- # this means to ignore newlines until "baseurl:"
   A Cybersecurity blog by shinris3n <br>
   👊 <a href = "/writeups">Writeups</a> 👊 <a href = "/news">News</a> 👊 <a href = "/resources">Resources</a> <br>
