--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: <a href = '/' style = "text-decoration:none;color:#b5e853;" >home/Gal1leo</a>
+title: <a href = '/' style = "text-decoration:none;color:#b5e853;" >Gal1leo.sh</a>
 description: >- # this means to ignore newlines until "baseurl:"
   A Cybersecurity blog by shinris3n <br>
-   <a href = "/writeups" color=#047d10>Writeups</a>  <a href = "/news">News</a>  <a href = "/resources">Resources</a> <br>
+   <a href = "/writeups" style="color  <a href = "/news">News</a>  <a href = "/resources">Resources</a> <br>
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 0xGal1leo
