--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: <a href = '/' style = "text-decoration:none;color:#b5e853;" >Gal1leo.sh</a>
 description: >- # this means to ignore newlines until "baseurl:"
-  A Cybersecurity blog by shinris3n <br>
+  A Cybersecurity blog by Gal1leo <br>
    <a href = "/writeups" style="color:#047d10;">Writeups</a>  <a href = "/news" style="color:#047d10;">News</a>  <a href = "/resources" style="color:#047d10;">Resources</a> <br>
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
