--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Cillian.Tech
+title: /home/Gal1leo
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Computer Science student. Interested in web exploitation, programming and cyber security. Occasionally partake in CTFs and bug bounties.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://cillian.tech" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  Cillian-Collins
+url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  GGal1leo
 show_downloads: false
 
 # Build settings
