--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,5 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-title: /home/Gal1leo
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Computer Science student. Interested in web exploitation, programming and cyber security. Occasionally partake in CTFs and bug bounties.
-
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://inspiring-babka-3c3d51.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  GGal1leo
-show_downloads: false
-
-# Build settings
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-
-excerpt_separator: "<!-- read more -->"
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-hacker
