--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: /home/Gal1leo
-description: "A Jekyll Blog Theme For Hackers"
+description: "A Michael Gleeson Enjoyer"
 author:
   name: "Gal1leo"
   email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  url: "https://gal1leo.tk/"
 
 baseurl: /
 
