--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ author:
   url: "https://gal1leo.tk/"
 
 baseurl: /
+thumbsurl: "/assets/images/CTF-Trophies/thumbs"
+
 
 source: .
 destination: ./_site
