--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "A Michael Gleeson Enjoyer"
 author:
   name: "Gal1leo"
   email: "someone@somewebsite.somedomain"
-  url: "https://gal1leo.tk/"
+  url: "https://gal1leo.wtf/"
 
 baseurl: /
 source: .
